--- a/oil.html
+++ b/oil.html
@@ -12,9 +12,9 @@
     <header>
         <div class="container">
             <div class="header__nav">
-                <a href="index.html#header">
+                <a class="logo__block" href="index.html#header">
                 <picture class="logo">
-                    <source class="source" srcset="images/Slider/logo_white.svg" media="(max-width: 960px)">
+                    <source class="source" srcset="images/Slider/logo_white.svg" media="(max-width: 800px)">
                     <img src="images/Home/logo.svg" alt="logo">
                 </picture>
                 </a>
@@ -129,35 +129,35 @@
             <div class="footer__grid">
 
                 <picture class="footer__logo">
-                    <source srcset="images/Slider/logo_white-footer.svg" media="(max-width: 960px)">
+                    <source srcset="images/Slider/logo_white-footer.svg" media="(max-width: 800px)">
                     <img src="images/Footer/footer-logo.svg" alt="logo">
                 </picture>
 
-                <div class="footer__office">
+                <address class="footer__office">
                     <h3>Head Office</h3>
-                    <p>"Sport" Business Center<br>
-                        (Bldg.7), Olympic town,<br>
-                        Ashgabat, 744000<br>
+                    <p>
+                        "Sport" Business Center
+                        (Bldg.7), Olympic town,
+                        Ashgabat, 744000
                         Turkmenistan.
                     </p>
-                </div>
+                </address>
 
-                <div class="footer__socials">
+                <address class="footer__socials">
                     <h3>Socials</h3>
                     <div class="socials_line">
                         <img src="images/Footer/Instagram.svg" alt="Instagram">
                         <img src="images/Footer/linkedin.svg" alt="linkedin">
                         <img src="images/Footer/facebook.svg" alt="facebook">
                     </div>
-                </div>
+                </address>
 
-                <div class="footer__iquiries">
+                <address class="footer__iquiries">
                     <h3>Inquiries</h3>
-                    <p>For any inquiries, questions<br>or commendations, please<br>call: +993 (12) 46 29
-                        37<br>
-                        info@ynanchyzmat.com
+                    <p>For any inquiries, questions or commendations, please call:<br><a href="tel:+99312462937">+993 (12) 46 29
+                        37</a><br><a href="mailto:info@ynanchyzmat.com">info@ynanchyzmat.com</a>
                     </p>
-                </div>
+                </address>
 
                 <div class="footer__company-name">
                     <p>
